--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "mongoose": "^8.18.3",
+    "nanoid": "^5.1.6",
     "nodemon": "^3.1.10"
   }
 }
