--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.18.3",
     "nanoid": "^5.1.6",
